# bookclub

./: Cargo.toml  justfile  telegram.sqlite
api/: .http  Cargo.toml  bookclub.db  build.rs
api/config/: default.json
api/db/: book.sqlite  bookclub.db
api/db/migrations/: 2_clubs.sql  2_members.sql  3_books.sql  3_users.sql  4_meetings.sql  4_memberships.sql  5_books.sql  5_has_read.sql  6_attendance.sql  6_meetings.sql  7_has_read.sql  8_attendance.sql  9_indexes.sql
api/src/: book.rs  db_connection.rs  error.rs  main.rs  open_library.rs  settings.rs  sqlite.rs
api/src/auth/: google.rs  mod.rs
api/src/auth/google/: client.rs  mod.rs
api/src/books/: mod.rs
api/src/clubs/: club.rs  mod.rs
api/src/clubs/memberships/: membership.rs  mod.rs
api/src/open_library/: client.rs  implementations.rs  mod.rs  open_library.rs
api/src/users/: mod.rs  user.rs
shared/src/: book.rs  lib.rs
telegram/: Cargo.toml
telegram/src/: main.rs
