[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11.24", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
anyhow = "1.0.79"
serde_with = "3.12.0"

[dev-dependencies]
axum-test = "17.3.0"
tokio-test = "0.4.3"
