[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11.24", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
anyhow = "1.0.79"
serde_with = "3.12.0"
tracing-test = "0.2.5"
axum-auth = "0.8.1"
config = { version = "0.15.11", features = ["json", "json5", "toml"] }

[dev-dependencies]
axum-test = "17.3.0"
tokio-test = "0.4.3"

[build-dependencies]
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.79"
fs_extra = "1.3.0"
