[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.0", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "chrono",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.11.24", features = ["json"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
anyhow = "1.0.79"
serde_with = "3.12.0"
tracing-test = "0.2.5"
axum-auth = "0.8.1"
config = { version = "0.15.11", features = ["json", "json5", "toml"] }
oauth2 = "5.0.0"
openidconnect = "4.0.0"
uuid = { version = "1.17.0", features = ["v4"] }
axum-extra = "0.10.1"

[dev-dependencies]
axum-test = "17.3.0"
tokio-test = "0.4.3"

[build-dependencies]
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-native-tls",
    "sqlite",
    "macros",
    "chrono",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.79"
fs_extra = "1.3.0"
serde_json = "1.0.140"
