[package]
name = "telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = { version = "0.4.26", features = ["serde"] }
chrono-english = "0.1.7"
dateparser = "0.2.0"
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
serde = "1.0.171"
teloxide = { version = "0.12.2", features = ["macros", "sqlite-storage"] }
tokio = { version = "1.29.1", features = ["full"] }
